adding images and styles

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipe page</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div id="page">
-      <img src="" alt="" />
+      <img src="assets/img/main-image.jpg" alt="Cupcakes image with coffe bean" />
       <main>
         <section id="about">
           <h1>Coffee Cupcakes with whipped cream</h1>
