--- a/index.html
+++ b/index.html
@@ -74,5 +74,8 @@
         </section>
       </main>
     </div>
+    <footer>
+      Developed with <img src="assets/img/ph_heart-fill.svg" alt="Heart"> by Matsutech - sti
+    </footer>
   </body>
 </html>
